# webapp-mandelbrot-rayon

./: Cargo.toml  index.html  run.py  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: main.rs
