[package]
name = "webapp-mandelbrot-rayon"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "=0.2.95" # pin to the same version of the CLI
wasm-bindgen-futures = "0.4.45"
wasm-bindgen-rayon = { version = "1.2.2", features = ["no-bundler"] }
rayon = "1.8.1"
dominator = "0.5.38"
async-rayon = "0.1.0"
js-sys = "0.3.72"
web-sys = { version = "0.3.72", features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "ImageData"] }
num-complex = "0.4.0"
getrandom = { version = "0.2.2", features = ["js"] }
rand = "0.8.3"
hsl = "0.1.1"
